[package]
name = "InterrupTweet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
dotenvy = "0.15.0"
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.1"
chrono = "0.4.40"
